CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_STATUS__c.object
<CustomObject>
    <fields>
        <fullName>CDE_ELV_WAIVER__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ELV Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDE_ATS_WAIVER__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATS Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADR_CITY_MLNG__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>City (Mailing)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_CITY__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>City (Physical)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_EMAIL__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADR_LINE1_MLNG__c</fullName>
        <description>Mailing Address - Street</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Street Address (Mailing)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE1__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Street Address (Physical)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>Operation_Hours_on_Friday__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation Hours on Friday</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Hours_on_Monday__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation Hours on Monday</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Hours_on_Saturday__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation Hours on Saturday</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Hours_on_Sunday__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation Hours on Sunday</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Hours_on_Thursday__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation Hours on Thursday</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Hours_on_Tuesday__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation Hours on Tuesday</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Hours_on_Wednesday__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation Hours on Wednesday</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE_MLNG__c</fullName>
        <label>State (Mailing)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE__c</fullName>
        <label>State (Physical)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_MLNG__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Zip (Mailing)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Zip (Physical)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_COUNTY_OWNER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Providers</relationshipLabel>
        <relationshipName>Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS_PROVR__c</fullName>
        <label>License Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00692</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_LICENSE__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00701</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_PROVR__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00691</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <label>License Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_EFFV_RATING__c</fullName>
        <label>Initial Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <label>License Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <formula>CreatedDate</formula>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Last_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Date Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <inlineHelpText>Last Contact date From OEC</inlineHelpText>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NAM_FACILITY__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Provider Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_FEIN__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>FEIN</label>		
        <length>9</length>		
        <type>Text</type>		
    </fields>
    <fields>
        <fullName>NBR_PHONE_PRIM__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_SSN__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Program Name External Id for Provider Capacity, Provider Condition external Objects</description>
        <externalId>true</externalId>
        <label>Program Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Slot_Contract_Suggestion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Slot Contract Suggestion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TXT_CHATS_RATING__c</fullName>
        <label>Quality Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHK_StateReqBGCheckComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Qualified Exempt Provider Only: This indicates the provider’s State required background check was cleared</inlineHelpText>
        <label>State required background check complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTE_FA_ReimEff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For Qualified Exempt Provider Only: Qualified Exempt Provider’s Final Fiscal Agreement and Care Reimbursement Allowed Effective Date</inlineHelpText>
        <label>Fiscal Agreement/Reimbursement Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDE_AmendedROISent__c</fullName>
        <label>Amended ROI Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_LocationOfCare__c</fullName>
        <label>Location of Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00856</valueSetName>
        </valueSet>
    </fields>
	<fields>
        <fullName>CDE_REQ_BGC_CHK_STATE__c</fullName>
        <inlineHelpText>For Qualified Exempt Provider Only: This indicates the provider's State required background check status</inlineHelpText>
        <label>Required Background Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00865</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_AllTrainingCompleted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>All Training Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_AmendedROISent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Amended ROI Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_FinalROIReceivedFromProvider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final ROI Received from Provider Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_FinalROIScanned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Final ROI Scanned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_ProvrConfirmedROIReceipt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Confirmed ROI Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_ProvrReceivedROI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Received ROI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_ProvrRecvdAmendedROI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Received Amended ROI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_ROIScanned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ROI Scanned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_TrainingPacketSentToProvr__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Packet Sent to Provider Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_VisitOccurred__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Occurred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_VisitScheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_Original_FA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CCCAP Original Fiscal Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_FirstCareProvided__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Date Care Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_UPK_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UPK Provider</label>
        <type>Checkbox</type>
    </fields>
    <label>Provider</label>
    <nameField>
        <label>Provider ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AmendedROISentDate_Required</fullName>
        <active>true</active>
        <description>Conditionally required if &quot;An Amended Report Sent?&quot; = Yes</description>
        <errorConditionFormula>AND(ISBLANK(DTE_AmendedROISent__c), ISPICKVAL(CDE_AmendedROISent__c, &quot;Yes&quot;))</errorConditionFormula>
        <errorDisplayField>DTE_AmendedROISent__c</errorDisplayField>
        <errorMessage>This field is required when &apos;Amended ROI Sent?&apos; is answered as &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProvrRecvdAmendedROIDate_Required</fullName>
        <active>true</active>
        <description>Conditionally Required if - &quot;An Amended Report Sent?&quot; = Yes</description>
        <errorConditionFormula>AND(ISBLANK(DTE_ProvrRecvdAmendedROI__c), ISPICKVAL(CDE_AmendedROISent__c, &quot;Yes&quot;))</errorConditionFormula>
        <errorDisplayField>DTE_ProvrRecvdAmendedROI__c</errorDisplayField>
        <errorMessage>This field is required when &apos;Amended ROI Sent?&apos; is answered as &apos;Yes&apos;.</errorMessage>
    </validationRules>
</CustomObject>