CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_STATUS__c/listViews/All_1.listView-meta.xml
<ListView>
    <fullName>All_1</fullName>
    <columns>NAME</columns>
    <columns>CDE_STATUS_PROVR__c</columns>
    <columns>NAM_FACILITY__c</columns>
    <columns>CDE_TYPE_PROVR__c</columns>
    <columns>CDE_TYPE_LICENSE__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CDE_COUNTY_OWNER__c</columns>
    <columns>TXT_CHATS_RATING__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>