CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_STATUS__c/listViews/ATS_Waiver_Providers.listView-meta.xml
<ListView>
    <fullName>ATS_Waiver_Providers</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CDE_STATUS_PROVR__c</columns>
    <columns>NAM_FACILITY__c</columns>
    <columns>CDE_TYPE_PROVR__c</columns>
    <columns>CDE_TYPE_LICENSE__c</columns>
    <columns>DTE_FA_ReimEff__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_STATUS_PROVR__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>CDE_ATS_WAIVER__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ATS Waiver Providers</label>
</ListView>