CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_STATUS__c/listViews/ELV_Providers_List.listView-meta.xml
<ListView>
    <fullName>ELV_Providers_List</fullName>
    <columns>NAME</columns>
    <columns>CDE_STATUS_PROVR__c</columns>
    <columns>NAM_FACILITY__c</columns>
    <columns>CDE_TYPE_PROVR__c</columns>
    <columns>CDE_TYPE_LICENSE__c</columns>
    <columns>CDE_ELV_WAIVER__c</columns>
    <columns>CDE_COUNTY_OWNER__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_STATUS_PROVR__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>CDE_ELV_WAIVER__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ELV Providers List</label>
</ListView>