CHATS_SIT/force-app/main/default/objects/T_CHATS_PROVR_STATUS__c/listViews/Provider_type_list.listView-meta.xml
<ListView>
    <fullName>Provider_type_list</fullName>
    <columns>NAME</columns>
    <columns>CDE_TYPE_PROVR__c</columns>
    <columns>NAM_FACILITY__c</columns>
    <columns>CDE_COUNTY_OWNER__c</columns>
    <columns>CDE_STATUS_PROVR__c</columns>
    <columns>DTE_FA_ReimEff__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_STATUS_PROVR__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>CDE_TYPE_PROVR__c</field>
        <operation>equals</operation>
        <value>EFACB,EFACH,DEFAB,DEFAH</value>
    </filters>
    <label>Provider type list</label>
</ListView>